feat: dedicated link graph matching algo